<resources>
    <string name="app_name">AITD Coin</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="loading_notice2"> 正在加载中</string>
    <string name="loading_finish2"> 加载完成</string>
    <string name="coin_unit_tittle">货币单位</string>
    <string name="setting_language_tittle">语言</string>
    <string name="sys_setting_tittle">系统设置</string>
    <string name="btc_transaction_tittle">BTC转账</string>
    <string name="usdt_transaction_tittle">USDT转账</string>
    <string name="eth_transaction_tittle">ETH转账</string>
    <string name="erc20_transaction_tittle">USDT-ERC20转账</string>
    <string name="input_receive_address_notice">请输入您要转入的地址</string>
    <string name="input_transaction_amount">请输入转账金额</string>
    <string name="notice_trans_to_me_refuse">请不要给自己转账</string>
    <string name="input_private_key_hint">明文私钥</string>
    <string name="input_keystore_hint">明文keystore</string>
    <string name="input_mnemonic_word_hint">明文助记词,用空格隔开</string>
    <string name="tittle_import_wallet">导入钱包</string>
    <string name="notice_mnemonic_wore_error">助记词不正确</string>
    <string name="notice_import_success">导入成功</string>
    <string name="notice_input_content">请输入相关内容</string>
    <string name="notice_agree_terms">请选择同意条款</string>
    <string name="notice_private_key_error">私钥长度不对</string>
    <string name="notice_same_private_key">已有同样私钥的币种</string>
    <string name="tittle_bulk_import_wallet">批量导入</string>
    <string name="tittle_single_import_wallet">单链导入</string>
    <string name="tittle_back_up_mnemonic">备份助记词</string>
    <string name="tittle_create_wallet">创建钱包</string>
    <string name="notice_create_success">创建成功</string>
    <string name="tittle_select_wallet">选择钱包</string>
    <string name="notice_input_psd">请填写密码</string>
    <string name="notice_twice_psd_diff">两次密码不一致</string>
    <string name="notice_agree_terms02">请同意条款</string>
    <string name="notice_contain_up_word">至少1个大写字母</string>
    <string name="notice_contain_low_word">至少1个小写字母</string>
    <string name="notice_contain_num">至少1个数字</string>
    <string name="notice_content_length">请输入8-32个字</string>
    <string name="text_select_which_word">请选择第%d个单词</string>
    <string name="tittle_verify_mnemonic">验证助记词</string>
    <string name="notice_select_first_word">请选择第1个助记词</string>
    <string name="notice_select_second_word">请选择第2个助记词</string>
    <string name="notice_select_third_word">请选择第3个助记词</string>
    <string name="notice_first_word_error">第1个助记词错误</string>
    <string name="notice_second_word_error">第2个助记词错误</string>
    <string name="notice_third_word_error">第3个助记词错误</string>
    <string name="tittle_btc_receive">BTC收款</string>
    <string name="tittle_usdt_omni_receive">USDT-OMNI收款</string>
    <string name="tittle_eth_receive">ETH收款</string>
    <string name="tittle_usdt_erc20_receive">USDT-ERC20收款</string>
    <string name="tittle_share_sth">分享</string>
    <string name="notice_copy_success">复制成功</string>
    <string name="tittle_transaction_detail">交易详情</string>
    <string name="text_receive_money">收款</string>
    <string name="tittle_change_wallet_name">自定义名称</string>
    <string name="notice_change_name_success">修改成功</string>
    <string name="notice_name_length_error">不能超过12个字符</string>
    <string name="notice_name_null">不能为空</string>
    <string name="tittle_export_private_key">导出私钥</string>
    <string name="tittle_export_keystore">导出Keystore</string>
    <string name="tittle_psd_notice_msg">密码提示信息</string>
    <string name="notice_psd_error">密码错误</string>
    <string name="tittle_hidden_coin">隐藏币种</string>
    <string name="text_create_wallet">创建</string>
    <string name="text_import_wallet">导入</string>
    <string name="tittle_wallet_manage">钱包管理</string>
    <string name="text_miner_fee">旷工费：</string>
    <string name="tittle_usdt_transaction">USDT转账</string>
    <string name="notice_transaction_error">转账失败</string>
    <string name="notice_input_receive_address">请填写您要转入的地址</string>
    <string name="notice_input_tx_amount">请输入转账金额</string>
    <string name="tittle_property">资产</string>
    <string name="tittle_browse">浏览</string>
    <string name="tittle_financial">理财</string>
    <string name="tittle_setting">设置</string>
    <string name="notice_function_not_open">功能暂未开放</string>
    <string name="notice_mnemonic_word_error">助记词不正确</string>
    <string name="notice_request_error">网络错误</string>
    <string name="text_back_up_mnemonic_notice1">请按顺序抄下下方12个助记词，我们将在下一步验证</string>
    <string name="text_back_up_mnemonic_warn1">请勿将助记词透露给任何人</string>
    <string name="text_back_up_mnemonic_warn2">助记词一旦丢失，资产将无法恢复</string>
    <string name="text_back_up_mnemonic_warn3">请勿通过截屏、网络传输的方式进行备份保存</string>
    <string name="text_back_up_mnemonic_warn4">遇到任何情况，请不要轻易卸载钱包APP</string>
    <string name="btn_next_step_text">下一步</string>
    <string name="text_receive_address">收款账户</string>
    <string name="notice_input_receive_address_hint">请输入您要转入的地址</string>
    <string name="text_transaction_amount">转账金额</string>
    <string name="notice_input_receive_value_hint">请输入收款金额</string>
    <string name="text_coin_balance">余额:</string>
    <string name="btn_all_value_text">全部</string>
    <string name="notice_input_remark_hint">请输入备注</string>
    <string name="text_miner_fee_tag">矿工费</string>
    <string name="notice_miner_fee_text">推荐矿工费(根据区块链网络波动)</string>
    <string name="text_recommend_miner_fee">推荐:1000sat</string>
    <string name="text_recommend_eth_miner_fee">推荐:50.00GWEI</string>
    <string name="text_expect_arrive_time">预计到账时间:10分钟</string>
    <string name="notice_remark_hint">备注</string>
    <string name="notice_change_wallet_name">1-12位字符，可包含中文，英文字符</string>
    <string name="btn_finish_text">完成</string>
    <string name="text_receive_address_copy">复制收款地址</string>
    <string name="notice_search_erc20_hint">搜索你想添加的ERC20币名称</string>
    <string name="btn_cancel_text">取消</string>
    <string name="text_create_wallet_loading">钱包正在创建中\n请稍后片刻</string>
    <string name="btn_confirm_text">确定</string>
    <string name="text_back_up_offline">离线保存</string>
    <string name="text_back_up_key_warn1">切勿保存至邮箱、记事本、网盘、聊天工具等，非常危险</string>
    <string name="text_back_up_key_warn2">请勿使用网络传输</string>
    <string name="text_back_up_key_warn3">请勿通过网络工具传输，一旦被黑客获取将可能造成不可挽回的资产损失。（建议离线设备通过扫二维码方式传输）</string>
    <string name="text_back_up_psd">密码管理工具保存</string>
    <string name="text_back_up_psd_warn1">建议使用密码管理工具管理</string>
    <string name="text_support_scan">仅供直接扫描</string>
    <string name="text_copy_qr_warn1">二维码请勿直接在手机本地进行保存、截图或网络传输，仅供用户在安全的离线环境下使用端对端扫描，以便离线传输进行备份与导入。</string>
    <string name="text_use_in_safe">在安全环境下使用</string>
    <string name="text_copy_qr_warn2">请在确保四周无人及无摄像头的情况下使用，二维码一旦被他人获取将可能造成不可挽回的资产损失。</string>
    <string name="btn_show_qr_code_text">显示二维码</string>
    <string name="btn_hidden_qr_code_text">点击隐藏</string>
    <string name="tittle_guide_slogan">全球自由流通的数字货币钱包</string>
    <string name="text_private_key_own">私钥完全由用户自主掌控</string>
    <string name="text_no_center_wallet">安全易用的去中心化钱包</string>
    <string name="btn_create_wallet_text">创建钱包</string>
    <string name="btn_import_wallet_text">导入钱包</string>
    <string name="text_local_wallet">去中心化钱包</string>
    <string name="text_total_property">总资产</string>
    <string name="text_available_property_tag">可用资产</string>
    <string name="text_frozen_property_tag">冻结资产</string>
    <string name="text_read_and_agree_terms">我已经仔细阅读并同意 </string>
    <string name="btn_start_import_wallet">开始导入</string>
    <string name="btn_what_is_private_key_text">什么是私钥？</string>
    <string name="text_simple_chinese">简体中文</string>
    <string name="text_english">英文</string>
    <string name="text_set_psd_warn1">密码用于保护交易和交易授权，强度非常重要。平台不存储密码，也无法帮您找回，请务必牢记</string>
    <string name="text_input_psd_hint">密码</string>
    <string name="text_psd_rules_tag">请使用：</string>
    <string name="text_psd_rules1">至少1个大写字母</string>
    <string name="text_psd_rules2">至少1个小写字母</string>
    <string name="text_psd_rules3">至少1个数字</string>
    <string name="text_psd_rules4">至少8个字符</string>
    <string name="notice_psd_repeat_hint">重复密码</string>
    <string name="notice_psd_remind_hint">密码提示</string>
    <string name="btn_create_text">创建</string>
    <string name="text_currency_tag">货币</string>
    <string name="text_language_tag">语言</string>
    <string name="text_transaction_state_success">转账成功</string>
    <string name="text_send_address_tag">付款地址</string>
    <string name="text_receive_address_tag">收款地址</string>
    <string name="text_chain_record_tag">链上记录</string>
    <string name="text_arrive_time_tag">到账时间</string>
    <string name="text_coin_block_height_tag">区块高度</string>
    <string name="tittle_send_money_text">转账</string>
    <string name="tittle_receive_money_text">收款</string>
    <string name="notice_verify_mnemonic_word_text">确保您已备份好您的助记词，请验证如下问题：</string>
    <string name="text_verify_word1_tag">请选择第1个单词</string>
    <string name="text_verify_word2_tag">请选择第2个单词</string>
    <string name="text_verify_word3_tag">请选择第3个单词</string>
    <string name="notice_input_safe_psd_text">请输入安全密码</string>
    <string name="text_my_property_tag">我的资产</string>
    <string name="btn_delete_wallet_text">删除钱包</string>
    <string name="btn_change_wallet_name_text">修改钱包名称</string>
    <string name="btn_psd_remind_text">密码提示</string>
    <string name="btn_export_private_key_text">导出私钥</string>
    <string name="btn_export_keystore_text">导出Keystore</string>
    <string name="btn_back_up_mnemonic_word_text">备份钱包助记词</string>
    <string name="text_transaction_receive_success">收款成功</string>
    <string name="tittle_confirm_transaction_msg">确认信息</string>
    <string name="text_transaction_amount_tag">转账金额</string>
    <string name="text_transaction_type_tag">支付信息</string>
    <string name="text_btc_transaction_type">BTC转账</string>
    <string name="text_usdt_transaction_type">USDT转账</string>
    <string name="text_eth_transaction_type">ETH转账</string>
    <string name="text_usdt_erc20_transaction_type">USDT-ERC20转账</string>
    <string name="tittle_input_psd">密码</string>
    <string name="btn_forget_psd_text">忘记密码怎么办</string>
    <string name="tittle_screen_shot_safe_notice">安全提醒</string>
    <string name="text_screen_shot_warn1">为您的资产安全考虑，请勿截屏。</string>
    <string name="text_screen_shot_warn2">截屏存入相册后，有可能同步至云端，导致助记词泄露。</string>
    <string name="text_screen_shot_warn3">建议您将助记词备份到断网的物理介质上，例如手抄在白纸上，并妥善保存。</string>
    <string name="notice_transaction_success">转账成功</string>
    <string name="text_input_mnemonic_word_tag">请填写您的助记词</string>
    <string name="notice_cut_by_space_hint">英文单词请按空格分隔单词</string>
    <string name="notice_mnemonic_error_text">当前助记词输入错误，请检查</string>
    <string name="btn_wallet_manage_text">钱包管理</string>
    <string name="btn_address_manage_text">地址管理</string>
    <string name="btn_my_message_text">我的消息</string>
    <string name="btn_invite_friend_text">邀请好友</string>
    <string name="btn_safe_center_text">安全中心</string>
    <string name="btn_sys_setting_text">系统设置</string>
    <string name="btn_about_us_text">关于我们</string>
    <string name="text_no_data">暂无数据</string>
    <string name="text_property_head">资产</string>
    <string name="text_dialog_import_wallet">导入钱包</string>
    <string name="text_dialog_wallet_manage">钱包管理</string>
    <string name="text_create_coin_alias_name">已有的%s地址</string>
    <string name="text_import_coin_alias_name">导入的的%s地址</string>
    <string name="text_transaction_state_fail">失败</string>
    <string name="text_transaction_state_waiting">等待打包</string>
    <string name="tittle_forget_psd">忘记密码</string>
    <string name="text_forget_psd_warn1">钱包不支持找回密码。但你可以通过导入钱包重置密码，新密码会覆盖旧密码。</string>
    <string name="text_forget_psd_warn2">如果你未备份对应的助记词或私钥，可以反复输入密码尝试，没有次数限制。</string>
    <string name="text_service_privacy_terms">《服务及隐私条款》</string>
</resources>