<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.wallet.initwallet.VerifyMemoryWordActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_menu"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_payment_address"
        style="@style/bg_edit_grey"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:drawableRight="@mipmap/ic_person"
        android:hint="@string/notice_input_receive_address_hint"
        android:paddingRight="10dp"
        android:textColorHint="@color/textGrey"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />


    <EditText
        android:id="@+id/et_payment_amount"
        style="@style/bg_edit_grey"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:drawableRight="@mipmap/ic_question"
        android:hint="@string/notice_input_receive_value_hint"
        android:paddingRight="10dp"
        android:textColorHint="@color/textGrey"
        app:layout_constraintTop_toBottomOf="@+id/et_payment_address" />


    <EditText
        android:id="@+id/et_payment_remark"
        style="@style/bg_edit_grey"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/notice_remark_hint"
        android:paddingRight="10dp"
        android:textColorHint="@color/textGrey"
        app:layout_constraintTop_toBottomOf="@+id/et_payment_amount" />


    <TextView
        android:id="@+id/et_payment_miner_fee"
        style="@style/bg_edit_grey"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingRight="10dp"
        android:text="@string/text_miner_fee"
        android:textColorHint="@color/textGrey"
        app:layout_constraintTop_toBottomOf="@+id/et_payment_remark" />


    <TextView
        android:id="@+id/tv_miner_fee_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/notice_miner_fee_text"
        android:textColor="@color/textGrey"
        android:textSize="12sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/et_payment_miner_fee"
        app:layout_constraintTop_toBottomOf="@+id/et_payment_miner_fee" />

    <TextView
        android:id="@+id/tv_miner_fee_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/text_recommend_miner_fee"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="@+id/et_payment_miner_fee"
        app:layout_constraintTop_toBottomOf="@+id/et_payment_miner_fee" />


    <com.tianqi.baselib.widget.CustomSeekBar
        android:id="@+id/seek_bar_miner_cost"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_miner_fee_recommend" />


    <TextView
        android:id="@+id/tv_expect_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/text_expect_arrive_time"
        android:textColor="@color/color_text_thin_grey"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_wallet"/>
    <TextView
        android:id="@+id/btn_create_wallet"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/btn_next_step_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.77"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/bg_button_grey" />


</androidx.constraintlayout.widget.ConstraintLayout>