<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.wallet.initwallet.SetSecurityPsdActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_menu"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_psd_notice"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/bg_set_psd_notice"
        android:gravity="center_vertical"
        android:paddingLeft="38dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:text="@string/text_set_psd_warn1"
        android:textColor="@color/text_main_black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />

    <ImageView
        android:id="@+id/iv_psd_notice"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="17dp"
        android:src="@mipmap/ic_yellow_reminder"
        app:layout_constraintLeft_toLeftOf="@+id/tv_psd_notice"
        app:layout_constraintTop_toTopOf="@+id/tv_psd_notice" />

    <EditText
        android:id="@+id/et_input_password"
        style="@style/bg_edit_grey"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:hint="@string/text_input_psd_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tv_psd_notice" />

    <ImageView
        android:id="@+id/iv_psd_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:src="@mipmap/ic_close_eye"
        app:layout_constraintBottom_toBottomOf="@+id/et_input_password"
        app:layout_constraintRight_toRightOf="@+id/et_input_password"
        app:layout_constraintTop_toTopOf="@+id/et_input_password" />

    <TextView
        android:id="@+id/tv_input_notice_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/text_psd_rules_tag"
        android:textColor="@color/text_main_black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/et_input_password" />

    <TextView
        android:id="@+id/tv_input_up_letter_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="9dp"
        android:drawableLeft="@mipmap/ic_input_psd_notice_point"
        android:drawablePadding="7dp"
        android:text="@string/text_psd_rules1"
        android:textColor="@color/text_main_black"
        android:textSize="12sp"

        app:layout_constraintTop_toBottomOf="@+id/tv_input_notice_tittle" />

    <TextView
        android:id="@+id/tv_input_low_letter_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="9dp"
        android:drawableLeft="@mipmap/ic_input_psd_notice_point"
        android:drawablePadding="7dp"
        android:text="@string/text_psd_rules2"
        android:textColor="@color/text_main_black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_up_letter_notice" />

    <TextView
        android:id="@+id/tv_input_num_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="9dp"
        android:drawableLeft="@mipmap/ic_input_psd_notice_point"
        android:drawablePadding="7dp"
        android:text="@string/text_psd_rules3"
        android:textColor="@color/text_main_black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_low_letter_notice" />

    <TextView
        android:id="@+id/tv_input_length_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="9dp"
        android:drawableLeft="@mipmap/ic_input_psd_notice_point"
        android:drawablePadding="7dp"
        android:text="@string/text_psd_rules4"
        android:textColor="@color/text_main_black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_num_notice" />

    <EditText
        android:id="@+id/et_confirm_password"
        style="@style/bg_edit_grey"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/notice_psd_repeat_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_length_notice" />

    <!--    <ImageView-->
    <!--        android:id="@+id/iv_confirm_psd_show"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginRight="10dp"-->
    <!--        android:src="@mipmap/ic_close_eye"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/et_confirm_password"-->
    <!--        app:layout_constraintRight_toRightOf="@+id/et_confirm_password"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/et_confirm_password" />-->


    <EditText
        android:id="@+id/et_password_reminder"
        style="@style/bg_edit_grey"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/notice_psd_remind_hint"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_wallet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <CheckBox
            android:id="@+id/checkbox_read_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:button="@drawable/chk_agree_provision_background"
            android:text="@string/text_read_and_agree_terms"
            android:textColor="@color/text_main_black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_service_privacy_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_service_privacy_terms"
            android:textColor="@color/text_light_blue"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/checkbox_read_term"
            app:layout_constraintLeft_toRightOf="@+id/checkbox_read_term"
            app:layout_constraintTop_toTopOf="@+id/checkbox_read_term" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_create_wallet"
        style="@style/bg_button_20_grey"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/btn_create_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintTop_toBottomOf="@+id/et_password_reminder" />

</androidx.constraintlayout.widget.ConstraintLayout>