<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.activity.GuideWalletActivity">

    <TextView
        android:id="@+id/tv_guide_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/tittle_guide_slogan"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        android:textColor="@color/text_main_black"
        android:layout_marginTop="60dp"/>


    <TextView
        android:id="@+id/tv_guide_notice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_guide_tittle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/text_private_key_own"
        android:textSize="16sp"
        android:textColor="@color/text_main_black"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/tv_guide_notice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_guide_notice1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/text_no_center_wallet"
        android:textSize="16sp"
        android:textColor="@color/text_main_black"
        android:layout_marginTop="6dp"/>

    <ImageView
        android:id="@+id/iv_guide_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@mipmap/ic_guide_logo"/>

    <TextView
        android:id="@+id/btn_create_wallet"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="45dp"
        android:text="@string/btn_create_wallet_text"
        app:layout_constraintTop_toBottomOf="@+id/iv_guide_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/bg_button_blue" />

    <TextView
        android:id="@+id/btn_import_wallet"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn_import_wallet_text"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_wallet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/bg_button_hollow_blue"/>


</androidx.constraintlayout.widget.ConstraintLayout>