<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/bg_words_white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:paddingHorizontal="15dp">

        <ImageView
            android:id="@+id/iv_shot_warning"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/ic_forget_psd_warning"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_shot_warning_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tittle_forget_psd"
            android:textColor="@color/text_main_black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_shot_warning" />

        <TextView
            android:id="@+id/iv_shot_warning_content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_forget_psd_warn1"
            android:textColor="@color/text_main_80_grey"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_shot_warning_tittle" />

        <TextView
            android:id="@+id/iv_shot_warning_content2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="14dp"
            android:text="@string/text_forget_psd_warn2"
            android:textColor="@color/text_main_80_grey"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_shot_warning_content1" />


        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="30dp"
            style="@style/bg_button_blue"
            android:text="@string/btn_confirm_text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>